I create the logic for we like each other

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,6 @@
 {
   "projects": {
-    "default": "nataliatindertutorial",
-    "TinderTutorias": "nataliatindertutorial"
+    "default": "nataliatindertutorial"
   },
   "targets": {},
   "etags": {}
